@@ -1,3 +1,7 @@
+drkns 25.05.2016 20:16:03 +0200 - build 4693
+
+1. При [x] Cursor at the end неадекватно работала замена в редакторе, содержащая \t.
+
 zg 24.05.2016 13:58:55 +0200 - build 4692
 
 1. уточнение 4685.
